--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <title>Об'ємне серце на WASM</title>
+  <title>Сердечко для Наді</title>
   <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
